--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
       </div>
 
       <div class="messages">
-        <!-- Todo -->
-        <p>Párrafo de ejemplo</p>
+        <p>Vidas: <span id="lives"></span></p>
       </div>
     </div>
 
